# videobuffer

./: .gitignore  __init__.py  pyproject.toml  video_types.py
src/buffer/: __init__.py  video_buffer.py
src/utils/: __init__.py  approval.py  dump.py
src/video/: __init__.py  frame_reader.py
