[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "VideoBuffer"
version = "0.1.0"
description = "Video buffer handling library"
license = { text = "MIT" }
readme = "README.md"

authors = [
    { name = "Your Name", email = "youremail@example.com" }
]

dependencies = [
    "opencv-python>=4.5.0",
    "numpy>=1.21.0",
    "av>=14.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.18"
]

[tool.setuptools.packages.find]
where = ["src"]